@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-11
+2011-08-29 Andrei Salnikov
+- added Bld::BldDataPimV1 class
+
 Tag: V00-00-10
 2011-08-22 Andrei Salnikov
 - added Princeton::ConfigV2 class (part of pdsdata V02-13-03)
